--- a/index.html
+++ b/index.html
@@ -3,10 +3,45 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Website</title>
+    <title>Tabletop RPG</title>
+    <link rel="stylesheet" href="styles.css">
+    <script defer src="script.js"></script>
 </head>
 <body>
-    <h1>Hello, World!</h1>
-    <p>Welcome to my website.</p>
+    <header>
+        <h1>Tabletop RPG</h1>
+        <nav>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Blog</a></li>
+                <li><a href="#">Resources</a></li>
+                <li><a href="#">About</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <section class="hero">
+        <h2>Welcome to the World of Tabletop RPGs</h2>
+        <p>A space to explore, create, and adventure.</p>
+    </section>
+
+    <main>
+        <section class="content">
+            <h2>Latest Posts</h2>
+            <p>Placeholder for blog posts.</p>
+        </section>
+
+        <aside class="sidebar">
+            <h3>Resources</h3>
+            <ul>
+                <li><a href="#">Character Sheets</a></li>
+                <li><a href="#">Game Rules</a></li>
+            </ul>
+        </aside>
+    </main>
+
+    <footer>
+        <p>&copy; 2025 Tabletop RPG. All rights reserved.</p>
+    </footer>
 </body>
 </html>
