--- a/index.html
+++ b/index.html
@@ -3,45 +3,112 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tabletop RPG</title>
+    <meta name="description" content="Portfolio of John Doe">
+    <title>John Doe's Portfolio</title>
     <link rel="stylesheet" href="styles.css">
-    <script defer src="script.js"></script>
 </head>
 <body>
+
+    <!-- Header Section -->
     <header>
-        <h1>Tabletop RPG</h1>
         <nav>
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Blog</a></li>
-                <li><a href="#">Resources</a></li>
-                <li><a href="#">About</a></li>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#projects">Projects</a></li>
+                <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
     </header>
 
-    <section class="hero">
-        <h2>Welcome to the World of Tabletop RPGs</h2>
-        <p>A space to explore, create, and adventure.</p>
+    <!-- Home Section -->
+    <section id="home">
+        <div class="hero">
+            <h1>Welcome to My Portfolio</h1>
+            <p>I'm John Doe, a passionate Web Developer.</p>
+        </div>
     </section>
 
-    <main>
-        <section class="content">
-            <h2>Latest Posts</h2>
-            <p>Placeholder for blog posts.</p>
-        </section>
+    <!-- About Section -->
+    <section id="about">
+        <h2>About Me</h2>
+        <p>Hi, I'm John Doe, a passionate Web Developer with a deep interest in building responsive, user-friendly websites. I specialize in both front-end and back-end development and have experience with a variety of technologies that allow me to create full-stack applications. I'm driven by a love for solving complex problems and continuously learning new skills.</p>
 
-        <aside class="sidebar">
-            <h3>Resources</h3>
-            <ul>
-                <li><a href="#">Character Sheets</a></li>
-                <li><a href="#">Game Rules</a></li>
-            </ul>
-        </aside>
-    </main>
+        <h3>My Skills</h3>
+        <ul>
+            <li><strong>Front-End Development:</strong> HTML, CSS, JavaScript, React, Vue.js</li>
+            <li><strong>Back-End Development:</strong> Node.js, Express.js, Python (Flask, Django)</li>
+            <li><strong>Databases:</strong> MongoDB, MySQL, PostgreSQL</li>
+            <li><strong>Version Control:</strong> Git, GitHub, GitLab</li>
+            <li><strong>Tools & Frameworks:</strong> Bootstrap, Tailwind CSS, jQuery, RESTful APIs</li>
+            <li><strong>Deployment & Hosting:</strong> Heroku, AWS, Netlify, DigitalOcean</li>
+        </ul>
 
+        <h3>My Journey</h3>
+        <p>I started my journey in web development back in 2018 after discovering a passion for coding. After completing a coding bootcamp and gaining practical experience through freelance projects, I landed my first full-time job as a web developer. Since then, I’ve worked with diverse teams, collaborated on various projects, and developed a wide range of websites and web applications for clients across different industries.</p>
+
+        <h3>What Drives Me</h3>
+        <p>What excites me the most about web development is the ability to make ideas come to life. Whether it’s building a complex web application or designing an intuitive interface, I find it deeply fulfilling to create solutions that people can interact with and benefit from. I'm always looking for ways to improve my skills, explore new technologies, and stay on top of the latest trends in the web development world.</p>
+
+        <h3>Fun Facts</h3>
+        <ul>
+            <li>I love hiking and have hiked some of the most scenic trails in the U.S.</li>
+            <li>When I’m not coding, you can find me experimenting with photography.</li>
+            <li>I’ve been an avid gamer for years and enjoy working on small indie game development projects in my free time.</li>
+        </ul>
+    </section>
+
+    <!-- Projects Section -->
+    <section id="projects">
+        <h2>My Projects</h2>
+
+        <div class="project">
+            <h3>Project 1: Social Media Dashboard</h3>
+            <p>A web application that aggregates and displays social media activity from multiple platforms like Twitter, Facebook, and Instagram. Built with React for the frontend, Node.js for the backend, and MongoDB for data storage. It includes authentication and real-time notifications.</p>
+            <a href="https://github.com/yourusername/social-media-dashboard" target="_blank">View on GitHub</a>
+        </div>
+
+        <div class="project">
+            <h3>Project 2: E-Commerce Website</h3>
+            <p>This e-commerce platform allows users to browse and purchase products with integrated payment processing (Stripe). Developed with Vue.js for the front end and Firebase for user authentication and real-time data storage.</p>
+            <a href="https://github.com/yourusername/e-commerce-website" target="_blank">View on GitHub</a>
+        </div>
+
+        <div class="project">
+            <h3>Project 3: Task Management App</h3>
+            <p>A productivity app that allows users to manage and track their tasks. Built with React for the frontend, and Node.js with Express for the backend. Features include user login, task categorization, and notifications.</p>
+            <a href="https://github.com/yourusername/task-management-app" target="_blank">View on GitHub</a>
+        </div>
+
+        <div class="project">
+            <h3>Project 4: Personal Finance Tracker</h3>
+            <p>This application helps users track their income and expenses. It includes interactive graphs and reports generated from stored data. The app is built with Angular and Firebase for real-time data updates.</p>
+            <a href="https://github.com/yourusername/finance-tracker" target="_blank">View on GitHub</a>
+        </div>
+
+        <div class="project">
+            <h3>Project 5: Portfolio Website</h3>
+            <p>This is the portfolio website you're currently viewing! It's built using HTML, CSS, and JavaScript, showcasing my skills, past projects, and experience as a web developer.</p>
+            <a href="https://github.com/yourusername/portfolio" target="_blank">View on GitHub</a>
+        </div>
+    </section>
+
+    <!-- Contact Section -->
+    <section id="contact">
+        <h2>Contact Me</h2>
+        <p>If you'd like to get in touch with me, feel free to send me an email or reach out on LinkedIn.</p>
+        <ul>
+            <li>Email: <a href="mailto:john.doe@example.com">john.doe@example.com</a></li>
+            <li>LinkedIn: <a href="https://www.linkedin.com/in/johndoe" target="_blank">linkedin.com/in/johndoe</a></li>
+            <li>GitHub: <a href="https://github.com/johndoe" target="_blank">github.com/johndoe</a></li>
+            <li>Twitter: <a href="https://twitter.com/johndoe" target="_blank">twitter.com/johndoe</a></li>
+        </ul>
+    </section>
+
+    <!-- Footer Section -->
     <footer>
-        <p>&copy; 2025 Tabletop RPG. All rights reserved.</p>
+        <p>&copy; 2025 John Doe. All rights reserved.</p>
     </footer>
+
 </body>
 </html>
