--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Portfolio of John Doe">
     <title>John Doe's Portfolio</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css"> <!-- Ensure the correct path to your CSS -->
 </head>
 <body>
 
@@ -53,62 +53,4 @@
         <h3>Fun Facts</h3>
         <ul>
             <li>I love hiking and have hiked some of the most scenic trails in the U.S.</li>
-            <li>When I’m not coding, you can find me experimenting with photography.</li>
-            <li>I’ve been an avid gamer for years and enjoy working on small indie game development projects in my free time.</li>
-        </ul>
-    </section>
-
-    <!-- Projects Section -->
-    <section id="projects">
-        <h2>My Projects</h2>
-
-        <div class="project">
-            <h3>Project 1: Social Media Dashboard</h3>
-            <p>A web application that aggregates and displays social media activity from multiple platforms like Twitter, Facebook, and Instagram. Built with React for the frontend, Node.js for the backend, and MongoDB for data storage. It includes authentication and real-time notifications.</p>
-            <a href="https://github.com/yourusername/social-media-dashboard" target="_blank">View on GitHub</a>
-        </div>
-
-        <div class="project">
-            <h3>Project 2: E-Commerce Website</h3>
-            <p>This e-commerce platform allows users to browse and purchase products with integrated payment processing (Stripe). Developed with Vue.js for the front end and Firebase for user authentication and real-time data storage.</p>
-            <a href="https://github.com/yourusername/e-commerce-website" target="_blank">View on GitHub</a>
-        </div>
-
-        <div class="project">
-            <h3>Project 3: Task Management App</h3>
-            <p>A productivity app that allows users to manage and track their tasks. Built with React for the frontend, and Node.js with Express for the backend. Features include user login, task categorization, and notifications.</p>
-            <a href="https://github.com/yourusername/task-management-app" target="_blank">View on GitHub</a>
-        </div>
-
-        <div class="project">
-            <h3>Project 4: Personal Finance Tracker</h3>
-            <p>This application helps users track their income and expenses. It includes interactive graphs and reports generated from stored data. The app is built with Angular and Firebase for real-time data updates.</p>
-            <a href="https://github.com/yourusername/finance-tracker" target="_blank">View on GitHub</a>
-        </div>
-
-        <div class="project">
-            <h3>Project 5: Portfolio Website</h3>
-            <p>This is the portfolio website you're currently viewing! It's built using HTML, CSS, and JavaScript, showcasing my skills, past projects, and experience as a web developer.</p>
-            <a href="https://github.com/yourusername/portfolio" target="_blank">View on GitHub</a>
-        </div>
-    </section>
-
-    <!-- Contact Section -->
-    <section id="contact">
-        <h2>Contact Me</h2>
-        <p>If you'd like to get in touch with me, feel free to send me an email or reach out on LinkedIn.</p>
-        <ul>
-            <li>Email: <a href="mailto:john.doe@example.com">john.doe@example.com</a></li>
-            <li>LinkedIn: <a href="https://www.linkedin.com/in/johndoe" target="_blank">linkedin.com/in/johndoe</a></li>
-            <li>GitHub: <a href="https://github.com/johndoe" target="_blank">github.com/johndoe</a></li>
-            <li>Twitter: <a href="https://twitter.com/johndoe" target="_blank">twitter.com/johndoe</a></li>
-        </ul>
-    </section>
-
-    <!-- Footer Section -->
-    <footer>
-        <p>&copy; 2025 John Doe. All rights reserved.</p>
-    </footer>
-
-</body>
-</html>
+            <li>When I
