--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="description" content="Portfolio of John Doe">
     <title>John Doe's Portfolio</title>
     <link rel="stylesheet" href="styles.css"> <!-- Ensure the correct path to your CSS -->
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
+
 </head>
 <body>
 
