--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Portfolio of John Doe">
     <title>John Doe's Portfolio</title>
-    <link rel="stylesheet" href="styles.css"> <!-- Ensure the correct path to your CSS -->
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
-
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
@@ -34,25 +32,23 @@
     <!-- About Section -->
     <section id="about">
         <h2>About Me</h2>
-        <p>Hi, I'm John Doe, a passionate Web Developer with a deep interest in building responsive, user-friendly websites. I specialize in both front-end and back-end development and have experience with a variety of technologies that allow me to create full-stack applications. I'm driven by a love for solving complex problems and continuously learning new skills.</p>
+        <p>Hi, I'm John Doe, a passionate Web Developer.</p>
+    </section>
 
-        <h3>My Skills</h3>
-        <ul>
-            <li><strong>Front-End Development:</strong> HTML, CSS, JavaScript, React, Vue.js</li>
-            <li><strong>Back-End Development:</strong> Node.js, Express.js, Python (Flask, Django)</li>
-            <li><strong>Databases:</strong> MongoDB, MySQL, PostgreSQL</li>
-            <li><strong>Version Control:</strong> Git, GitHub, GitLab</li>
-            <li><strong>Tools & Frameworks:</strong> Bootstrap, Tailwind CSS, jQuery, RESTful APIs</li>
-            <li><strong>Deployment & Hosting:</strong> Heroku, AWS, Netlify, DigitalOcean</li>
-        </ul>
+    <!-- Projects Section -->
+    <section id="projects">
+        <h2>My Projects</h2>
+    </section>
 
-        <h3>My Journey</h3>
-        <p>I started my journey in web development back in 2018 after discovering a passion for coding. After completing a coding bootcamp and gaining practical experience through freelance projects, I landed my first full-time job as a web developer. Since then, I’ve worked with diverse teams, collaborated on various projects, and developed a wide range of websites and web applications for clients across different industries.</p>
+    <!-- Contact Section -->
+    <section id="contact">
+        <h2>Contact Me</h2>
+    </section>
 
-        <h3>What Drives Me</h3>
-        <p>What excites me the most about web development is the ability to make ideas come to life. Whether it’s building a complex web application or designing an intuitive interface, I find it deeply fulfilling to create solutions that people can interact with and benefit from. I'm always looking for ways to improve my skills, explore new technologies, and stay on top of the latest trends in the web development world.</p>
+    <!-- Footer Section -->
+    <footer>
+        <p>&copy; 2025 John Doe. All rights reserved.</p>
+    </footer>
 
-        <h3>Fun Facts</h3>
-        <ul>
-            <li>I love hiking and have hiked some of the most scenic trails in the U.S.</li>
-            <li>When I
+</body>
+</html>
