--- a/index.html
+++ b/index.html
@@ -1,54 +1,52 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Portfolio of John Doe">
-    <title>John Doe's Portfolio</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
+<section id="projects">
+    <h2>My Projects</h2>
 
-    <!-- Header Section -->
-    <header>
-        <nav>
-            <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#projects">Projects</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
+    <!-- Project 1 -->
+    <div class="project">
+        <h3>Project 1: Social Media Dashboard</h3>
+        <p>A web application that aggregates and displays social media activity from multiple platforms like Twitter, Facebook, and Instagram. Built with React for the frontend, Node.js for the backend, and MongoDB for data storage. It includes authentication and real-time notifications.</p>
+        <a href="https://github.com/yourusername/social-media-dashboard" target="_blank">View on GitHub</a>
+    </div>
 
-    <!-- Home Section -->
-    <section id="home">
-        <div class="hero">
-            <h1>Welcome to My Portfolio</h1>
-            <p>I'm John Doe, a passionate Web Developer.</p>
-        </div>
-    </section>
+    <!-- Project 2 -->
+    <div class="project">
+        <h3>Project 2: E-Commerce Website</h3>
+        <p>This e-commerce platform allows users to browse and purchase products with integrated payment processing (Stripe). Developed with Vue.js for the frontend and Firebase for user authentication and real-time data storage.</p>
+        <a href="https://github.com/yourusername/e-commerce-website" target="_blank">View on GitHub</a>
+    </div>
 
-    <!-- About Section -->
-    <section id="about">
-        <h2>About Me</h2>
-        <p>Hi, I'm John Doe, a passionate Web Developer.</p>
-    </section>
+    <!-- Project 3 -->
+    <div class="project">
+        <h3>Project 3: Task Management App</h3>
+        <p>A productivity app that allows users to manage and track their tasks. Built with React for the frontend, and Node.js with Express for the backend. Features include user login, task categorization, and notifications.</p>
+        <a href="https://github.com/yourusername/task-management-app" target="_blank">View on GitHub</a>
+    </div>
 
-    <!-- Projects Section -->
-    <section id="projects">
-        <h2>My Projects</h2>
-    </section>
+    <!-- Project 4 -->
+    <div class="project">
+        <h3>Project 4: Personal Finance Tracker</h3>
+        <p>This application helps users track their income and expenses. It includes interactive graphs and reports generated from stored data. The app is built with Angular and Firebase for real-time data updates.</p>
+        <a href="https://github.com/yourusername/finance-tracker" target="_blank">View on GitHub</a>
+    </div>
 
-    <!-- Contact Section -->
-    <section id="contact">
-        <h2>Contact Me</h2>
-    </section>
+    <!-- Project 5 -->
+    <div class="project">
+        <h3>Project 5: Portfolio Website</h3>
+        <p>This is the portfolio website you're currently viewing! It's built using HTML, CSS, and JavaScript, showcasing my skills, past projects, and experience as a web developer.</p>
+        <a href="https://github.com/yourusername/portfolio" target="_blank">View on GitHub</a>
+    </div>
 
-    <!-- Footer Section -->
-    <footer>
-        <p>&copy; 2025 John Doe. All rights reserved.</p>
-    </footer>
+    <!-- Project 6: Weather App -->
+    <div class="project">
+        <h3>Project 6: Weather App</h3>
+        <p>A simple web app that allows users to check the weather based on their location. Utilizes the OpenWeatherMap API to fetch data and displays it in a user-friendly interface. Built with React, and styled with Tailwind CSS for a modern look.</p>
+        <a href="https://github.com/yourusername/weather-app" target="_blank">View on GitHub</a>
+    </div>
 
-</body>
-</html>
+    <!-- Project 7: Blogging Platform -->
+    <div class="project">
+        <h3>Project 7: Blogging Platform</h3>
+        <p>A full-stack blogging platform where users can create, edit, and delete posts. Users can also comment and interact with other blog posts. Built with Node.js, Express.js, MongoDB, and EJS for the templating engine.</p>
+        <a href="https://github.com/yourusername/blogging-platform" target="_blank">View on GitHub</a>
+    </div>
+</section>
