--- a/index.html
+++ b/index.html
@@ -1,112 +1,81 @@
-/* Global Styles */
-body {
-    font-family: 'Arial', sans-serif;
-    margin: 0;
-    padding: 0;
-    background-color: #1d1f20;
-    color: #fff;
-    transition: background-color 0.3s, color 0.3s;
-}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Portfolio of John Doe">
+    <title>John Doe's Portfolio</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
 
-/* Header Styling */
-header {
-    background-color: #6f34a1; /* Purple background */
-    padding: 20px;
-    text-align: center;
-}
+    <!-- Header Section -->
+    <header>
+        <nav>
+            <ul>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#projects">Projects</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
 
-header nav ul {
-    list-style: none;
-    padding: 0;
-}
+    <!-- Home Section -->
+    <section id="home">
+        <div class="hero">
+            <h1>Welcome to My Portfolio</h1>
+            <p>I'm John Doe, a passionate Web Developer and Game Enthusiast.</p>
+        </div>
+    </section>
 
-header nav ul li {
-    display: inline;
-    margin: 0 15px;
-}
+    <!-- About Section -->
+    <section id="about">
+        <h2>About Me</h2>
+        <p>Hi, I'm John Doe, a passionate Web Developer with experience in both front-end and back-end technologies. I specialize in creating user-friendly web applications, and I'm also an avid gamer with a love for creative design and technology!</p>
+    </section>
 
-header nav ul li a {
-    color: #fff;
-    text-decoration: none;
-    font-size: 1.2em;
-}
+    <!-- Projects Section -->
+    <section id="projects">
+        <h2>My Projects</h2>
 
-/* Section Styling */
-section {
-    padding: 40px;
-    margin: 20px 0;
-    border-radius: 8px;
-}
+        <!-- Project 1 -->
+        <div class="project">
+            <h3>Project 1: Social Media Dashboard</h3>
+            <p>A web application that aggregates social media activity from multiple platforms. Built with React, Node.js, and MongoDB.</p>
+            <a href="https://github.com/yourusername/social-media-dashboard" target="_blank">View on GitHub</a>
+        </div>
 
-h2 {
-    color: #b052ff; /* Lighter purple */
-    font-size: 2em;
-    margin-bottom: 20px;
-}
+        <!-- Project 2 -->
+        <div class="project">
+            <h3>Project 2: E-Commerce Website</h3>
+            <p>An e-commerce platform that integrates payment processing (Stripe) and product management. Developed with Vue.js and Firebase.</p>
+            <a href="https://github.com/yourusername/e-commerce-website" target="_blank">View on GitHub</a>
+        </div>
 
-h3 {
-    color: #dc87ff; /* Light pink */
-    font-size: 1.8em;
-    margin-bottom: 15px;
-}
+        <!-- Project 3 -->
+        <div class="project">
+            <h3>Project 3: Personal Finance Tracker</h3>
+            <p>A finance tracker app that helps users track their expenses and manage their budget. Built using Angular and Firebase for real-time updates.</p>
+            <a href="https://github.com/yourusername/finance-tracker" target="_blank">View on GitHub</a>
+        </div>
+    </section>
 
-ul {
-    list-style: none;
-    padding: 0;
-}
+    <!-- Contact Section -->
+    <section id="contact">
+        <h2>Contact Me</h2>
+        <p>If you'd like to get in touch, feel free to send me a message!</p>
+        <ul>
+            <li>Email: <a href="mailto:john.doe@example.com">john.doe@example.com</a></li>
+            <li>LinkedIn: <a href="https://www.linkedin.com/in/johndoe" target="_blank">linkedin.com/in/johndoe</a></li>
+            <li>GitHub: <a href="https://github.com/johndoe" target="_blank">github.com/johndoe</a></li>
+        </ul>
+    </section>
 
-ul li {
-    margin: 5px 0;
-}
+    <!-- Footer Section -->
+    <footer>
+        <p>&copy; 2025 John Doe. All rights reserved.</p>
+    </footer>
 
-a {
-    color: #b052ff;
-    text-decoration: none;
-    font-weight: bold;
-}
-
-/* Projects Section */
-.project {
-    background-color: #2c2f36;
-    padding: 20px;
-    border-radius: 8px;
-    margin-bottom: 20px;
-    transition: background-color 0.3s;
-}
-
-.project:hover {
-    background-color: #6f34a1;
-}
-
-.project a {
-    display: block;
-    margin-top: 10px;
-    color: #fff;
-    font-size: 1.1em;
-}
-
-/* Footer Section */
-footer {
-    background-color: #6f34a1;
-    text-align: center;
-    padding: 10px;
-    position: fixed;
-    width: 100%;
-    bottom: 0;
-}
-
-/* Media Queries for Responsiveness */
-@media (max-width: 768px) {
-    header nav ul li {
-        display: block;
-        margin-bottom: 10px;
-    }
-
-    section {
-        padding: 20px;
-    }
-
-    footer {
-        font-size: 0.8em;
-    }
-}
+</body>
+</html>
