--- a/index.html
+++ b/index.html
@@ -40,25 +40,44 @@
         <h2>My Projects</h2>
 
         <!-- Project 1 -->
-        <div class="project">
-            <h3>Project 1: Social Media Dashboard</h3>
+        <div class="project" id="project-1">
+            <h3><a href="#project-1-details">Project 1: Social Media Dashboard</a></h3>
             <p>A web application that aggregates social media activity from multiple platforms. Built with React, Node.js, and MongoDB.</p>
-            <a href="https://github.com/yourusername/social-media-dashboard" target="_blank">View on GitHub</a>
+            <a href="#project-1-details" class="details-link">Learn More</a>
         </div>
 
         <!-- Project 2 -->
-        <div class="project">
-            <h3>Project 2: E-Commerce Website</h3>
+        <div class="project" id="project-2">
+            <h3><a href="#project-2-details">Project 2: E-Commerce Website</a></h3>
             <p>An e-commerce platform that integrates payment processing (Stripe) and product management. Developed with Vue.js and Firebase.</p>
-            <a href="https://github.com/yourusername/e-commerce-website" target="_blank">View on GitHub</a>
+            <a href="#project-2-details" class="details-link">Learn More</a>
         </div>
 
         <!-- Project 3 -->
-        <div class="project">
-            <h3>Project 3: Personal Finance Tracker</h3>
+        <div class="project" id="project-3">
+            <h3><a href="#project-3-details">Project 3: Personal Finance Tracker</a></h3>
             <p>A finance tracker app that helps users track their expenses and manage their budget. Built using Angular and Firebase for real-time updates.</p>
-            <a href="https://github.com/yourusername/finance-tracker" target="_blank">View on GitHub</a>
+            <a href="#project-3-details" class="details-link">Learn More</a>
         </div>
+    </section>
+
+    <!-- Project Details Sections (hidden on page load) -->
+    <section id="project-1-details" class="project-details">
+        <h3>Project 1: Social Media Dashboard</h3>
+        <p>Details about the project and technologies used. This is a project that aggregates social media data and presents it in a user-friendly dashboard. Built with React, Node.js, and MongoDB, it offers a seamless integration with various social platforms.</p>
+        <a href="#projects" class="back-link">Back to Projects</a>
+    </section>
+
+    <section id="project-2-details" class="project-details">
+        <h3>Project 2: E-Commerce Website</h3>
+        <p>This is an e-commerce platform that integrates Stripe for payment processing. Built with Vue.js and Firebase, this project allows for real-time updates and includes features such as a shopping cart and user authentication.</p>
+        <a href="#projects" class="back-link">Back to Projects</a>
+    </section>
+
+    <section id="project-3-details" class="project-details">
+        <h3>Project 3: Personal Finance Tracker</h3>
+        <p>The finance tracker helps users manage their budgets and track expenses. This project was built using Angular and Firebase, providing users with a real-time updating dashboard and visual financial insights.</p>
+        <a href="#projects" class="back-link">Back to Projects</a>
     </section>
 
     <!-- Contact Section -->
