--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="description" content="Portfolio of John Doe">
     <title>John Doe's Portfolio</title>
     <link rel="stylesheet" href="styles.css">
+    <script defer src="script.js"></script>
 </head>
 <body>
 
@@ -32,7 +33,7 @@
     <!-- About Section -->
     <section id="about">
         <h2>About Me</h2>
-        <p>Hi, I'm John Doe, a passionate Web Developer with experience in both front-end and back-end technologies. I specialize in creating user-friendly web applications, and I'm also an avid gamer with a love for creative design and technology!</p>
+        <p>Hi, I'm John Doe, a passionate Web Developer with experience in front-end and back-end technologies. I specialize in creating user-friendly web applications.</p>
     </section>
 
     <!-- Projects Section -->
@@ -41,21 +42,34 @@
 
         <!-- Project 1 -->
         <div class="project">
-            <h3>Project 1: Social Media Dashboard</h3>
-            <p>A web application that aggregates social media activity from multiple platforms. Built with React, Node.js, and MongoDB.</p>
+            <button class="accordion">Social Media Dashboard</button>
+            <div class="panel">
+                <img src="images/project1.jpg" alt="Social Media Dashboard">
+                <p>A web application that aggregates social media activity from multiple platforms. Built with React, Node.js, and MongoDB.</p>
+                <a href="files/project1-details.pdf" download class="download-btn">Download Details</a>
+            </div>
         </div>
 
         <!-- Project 2 -->
         <div class="project">
-            <h3>Project 2: E-Commerce Website</h3>
-            <p>An e-commerce platform that integrates payment processing (Stripe) and product management. Developed with Vue.js and Firebase.</p>
+            <button class="accordion">E-Commerce Website</button>
+            <div class="panel">
+                <img src="images/project2.jpg" alt="E-Commerce Website">
+                <p>An e-commerce platform integrating payment processing (Stripe) and product management. Developed with Vue.js and Firebase.</p>
+                <a href="files/project2-details.pdf" download class="download-btn">Download Details</a>
+            </div>
         </div>
 
         <!-- Project 3 -->
         <div class="project">
-            <h3>Project 3: Personal Finance Tracker</h3>
-            <p>A finance tracker app that helps users track their expenses and manage their budget. Built using Angular and Firebase for real-time updates.</p>
+            <button class="accordion">Personal Finance Tracker</button>
+            <div class="panel">
+                <img src="images/project3.jpg" alt="Personal Finance Tracker">
+                <p>A finance tracker app that helps users track expenses and manage budgets. Built using Angular and Firebase for real-time updates.</p>
+                <a href="files/project3-details.pdf" download class="download-btn">Download Details</a>
+            </div>
         </div>
+
     </section>
 
     <!-- Contact Section -->
