--- a/index.html
+++ b/index.html
@@ -1,92 +1,105 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Portfolio of John Doe">
-    <title>John Doe's Portfolio</title>
-    <link rel="stylesheet" href="styles.css">
-    <script defer src="script.js"></script>
-</head>
-<body>
+/* Global Styles */
+body {
+    font-family: 'Arial', sans-serif;
+    margin: 0;
+    padding: 0;
+    background-color: #1d1f20;
+    color: #fff;
+    transition: background-color 0.3s, color 0.3s;
+}
 
-    <!-- Header Section -->
-    <header>
-        <nav>
-            <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#projects">Projects</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
+/* Header Styling */
+header {
+    background-color: #6a4c79;
+    padding: 20px;
+    text-align: center;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+}
 
-    <!-- Home Section -->
-    <section id="home">
-        <div class="hero">
-            <h1>Welcome to My Portfolio</h1>
-            <p>I'm John Doe, a passionate Web Developer and Game Enthusiast.</p>
-        </div>
-    </section>
+header nav ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
 
-    <!-- About Section -->
-    <section id="about">
-        <h2>About Me</h2>
-        <p>Hi, I'm John Doe, a passionate Web Developer with experience in front-end and back-end technologies. I specialize in creating user-friendly web applications.</p>
-    </section>
+header nav ul li {
+    display: inline;
+    margin: 0 15px;
+}
 
-    <!-- Projects Section -->
-    <section id="projects">
-        <h2>My Projects</h2>
+header nav ul li a {
+    color: #fff;
+    text-decoration: none;
+    font-size: 1.2em;
+}
 
-        <!-- Project 1 -->
-        <div class="project">
-            <button class="accordion">Social Media Dashboard</button>
-            <div class="panel">
-                <img src="images/project1.jpg" alt="Social Media Dashboard">
-                <p>A web application that aggregates social media activity from multiple platforms. Built with React, Node.js, and MongoDB.</p>
-                <a href="files/project1-details.pdf" download class="download-btn">Download Details</a>
-            </div>
-        </div>
+header nav ul li a:hover {
+    color: #dc87ff;
+}
 
-        <!-- Project 2 -->
-        <div class="project">
-            <button class="accordion">E-Commerce Website</button>
-            <div class="panel">
-                <img src="images/project2.jpg" alt="E-Commerce Website">
-                <p>An e-commerce platform integrating payment processing (Stripe) and product management. Developed with Vue.js and Firebase.</p>
-                <a href="files/project2-details.pdf" download class="download-btn">Download Details</a>
-            </div>
-        </div>
+/* Sections */
+section {
+    padding: 60px 40px;
+    margin: 20px 0;
+    border-radius: 8px;
+    background-color: #2c2f36;
+}
 
-        <!-- Project 3 -->
-        <div class="project">
-            <button class="accordion">Personal Finance Tracker</button>
-            <div class="panel">
-                <img src="images/project3.jpg" alt="Personal Finance Tracker">
-                <p>A finance tracker app that helps users track expenses and manage budgets. Built using Angular and Firebase for real-time updates.</p>
-                <a href="files/project3-details.pdf" download class="download-btn">Download Details</a>
-            </div>
-        </div>
+/* Accordion (Project Dropdown) */
+.accordion {
+    background-color: #6a4c79;
+    color: white;
+    cursor: pointer;
+    padding: 15px;
+    width: 100%;
+    border: none;
+    text-align: left;
+    font-size: 1.2em;
+    transition: 0.4s;
+    border-radius: 8px;
+}
 
-    </section>
+.accordion:hover {
+    background-color: #dc87ff;
+}
 
-    <!-- Contact Section -->
-    <section id="contact">
-        <h2>Contact Me</h2>
-        <p>If you'd like to get in touch, feel free to send me a message!</p>
-        <ul>
-            <li>Email: <a href="mailto:john.doe@example.com">john.doe@example.com</a></li>
-            <li>LinkedIn: <a href="https://www.linkedin.com/in/johndoe" target="_blank">linkedin.com/in/johndoe</a></li>
-            <li>GitHub: <a href="https://github.com/johndoe" target="_blank">github.com/johndoe</a></li>
-        </ul>
-    </section>
+.panel {
+    display: none;
+    background-color: #333;
+    overflow: hidden;
+    padding: 0 20px;
+    border-radius: 8px;
+}
 
-    <!-- Footer Section -->
-    <footer>
-        <p>&copy; 2025 John Doe. All rights reserved.</p>
-    </footer>
+.panel img {
+    width: 100%;
+    max-width: 500px;
+    margin-top: 15px;
+    border-radius: 8px;
+}
 
-</body>
-</html>
+/* Download Button */
+.download-btn {
+    display: inline-block;
+    padding: 10px 15px;
+    background-color: #dc87ff;
+    color: #6a4c79;
+    text-decoration: none;
+    border-radius: 5px;
+    font-weight: bold;
+}
+
+.download-btn:hover {
+    background-color: #fff;
+    color: #6a4c79;
+}
+
+/* Footer */
+footer {
+    background-color: #6a4c79;
+    text-align: center;
+    padding: 15px 0;
+    position: fixed;
+    width: 100%;
+    bottom: 0;
+}
