--- a/index.html
+++ b/index.html
@@ -1,33 +1,74 @@
-<section id="projects">
-    <h2>My Projects</h2>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Your Portfolio</title>
+    <link rel="stylesheet" href="C:\Users\tromb\portfolio_site\kyladriscoll.github.io\styles.css">
 
-    <!-- Project 1 -->
-    <div class="project">
-        <h3>Project 1: Social Media Dashboard</h3>
-        <p>A web application that aggregates social media activity from multiple platforms. Built with React, Node.js, and MongoDB.</p>
-        <div class="dropdown-content">
-            <p>This project allows users to see their aggregated social media stats. Built using React for the frontend and Node.js on the backend. MongoDB handles the data.</p>
-            <a href="project1.zip" download>Download Files</a>
-        </div>
-    </div>
+</head>
+<body>
 
-    <!-- Project 2 -->
-    <div class="project">
-        <h3>Project 2: E-Commerce Website</h3>
-        <p>An e-commerce platform that integrates payment processing (Stripe) and product management. Developed with Vue.js and Firebase.</p>
-        <div class="dropdown-content">
-            <p>This project is a fully functional e-commerce store, where users can browse products, add them to the cart, and checkout securely using Stripe.</p>
-            <a href="project2.zip" download>Download Files</a>
+    <!-- Header Section -->
+    <header>
+        <div class="container">
+            <h1>Your Name</h1>
+            <nav>
+                <ul>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#projects">Projects</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+            </nav>
         </div>
-    </div>
+    </header>
 
-    <!-- Project 3 -->
-    <div class="project">
-        <h3>Project 3: Personal Finance Tracker</h3>
-        <p>A finance tracker app that helps users track their expenses and manage their budget. Built using Angular and Firebase for real-time updates.</p>
-        <div class="dropdown-content">
-            <p>This app lets users input their income and expenses, and it provides real-time updates on their budget. Built with Angular for the frontend and Firebase for backend services.</p>
-            <a href="project3.zip" download>Download Files</a>
+    <!-- About Section -->
+    <section id="about">
+        <div class="container">
+            <h2>About Me</h2>
+            <p>Hi! I'm [Your Name], a passionate developer/designer. I specialize in web development, design, and creative projects. With years of experience and a love for learning, I always strive to create intuitive, responsive, and visually stunning digital experiences.</p>
         </div>
-    </div>
-</section>
+    </section>
+
+    <!-- Projects Section -->
+    <section id="projects">
+        <div class="container">
+            <h2>Projects</h2>
+            <div class="project">
+                <h3>Project 1</h3>
+                <p>Short description of the project. What tools were used? What was the outcome?</p>
+            </div>
+            <div class="project">
+                <h3>Project 2</h3>
+                <p>Short description of the project. What tools were used? What was the outcome?</p>
+            </div>
+            <div class="project">
+                <h3>Project 3</h3>
+                <p>Short description of the project. What tools were used? What was the outcome?</p>
+            </div>
+        </div>
+    </section>
+
+    <!-- Contact Section -->
+    <section id="contact">
+        <div class="container">
+            <h2>Contact Me</h2>
+            <p>If you'd like to work together, collaborate, or just want to say hello, feel free to reach out!</p>
+            <ul>
+                <li>Email: <a href="mailto:yourname@example.com">yourname@example.com</a></li>
+                <li>LinkedIn: <a href="https://www.linkedin.com/in/yourprofile" target="_blank">LinkedIn Profile</a></li>
+                <li>GitHub: <a href="https://github.com/yourusername" target="_blank">GitHub Profile</a></li>
+            </ul>
+        </div>
+    </section>
+
+    <!-- Footer Section -->
+    <footer>
+        <div class="container">
+            <p>&copy; 2025 Your Name</p>
+        </div>
+    </footer>
+
+</body>
+</html>
