--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Your Portfolio</title>
-    <link rel="stylesheet" href="C:\Users\tromb\portfolio_site\kyladriscoll.github.io\styles.css">
-
+    <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
 
-    <!-- Header Section -->
+    <!-- Header -->
     <header>
         <div class="container">
             <h1>Your Name</h1>
@@ -35,18 +36,22 @@
     <section id="projects">
         <div class="container">
             <h2>Projects</h2>
-            <div class="project">
-                <h3>Project 1</h3>
-                <p>Short description of the project. What tools were used? What was the outcome?</p>
-            </div>
-            <div class="project">
-                <h3>Project 2</h3>
-                <p>Short description of the project. What tools were used? What was the outcome?</p>
-            </div>
-            <div class="project">
-                <h3>Project 3</h3>
-                <p>Short description of the project. What tools were used? What was the outcome?</p>
-            </div>
+
+            <details>
+                <summary>Project 1 - Cool Game</summary>
+                <p>Description of the project. What tools were used? What was the outcome?</p>
+            </details>
+
+            <details>
+                <summary>Project 2 - Portfolio Website</summary>
+                <p>Description of the project. What tools were used? What was the outcome?</p>
+            </details>
+
+            <details>
+                <summary>Project 3 - UI Concept</summary>
+                <p>Description of the project. What tools were used? What was the outcome?</p>
+            </details>
+
         </div>
     </section>
 
@@ -63,7 +68,7 @@
         </div>
     </section>
 
-    <!-- Footer Section -->
+    <!-- Footer -->
     <footer>
         <div class="container">
             <p>&copy; 2025 Your Name</p>
@@ -71,4 +76,5 @@
     </footer>
 
 </body>
+
 </html>
