--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- Header -->
     <header>
         <div class="container">
-            <h1>Your Name</h1>
+            <h1>Kyla Driscoll</h1>
             <nav>
                 <ul>
                     <li><a href="#about">About</a></li>
@@ -28,7 +28,7 @@
     <section id="about">
         <div class="container">
             <h2>About Me</h2>
-            <p>Hi! I'm [Your Name], a passionate developer/designer. I specialize in web development, design, and creative projects. With years of experience and a love for learning, I always strive to create intuitive, responsive, and visually stunning digital experiences.</p>
+            <p>Hi! I'm [Kyla Driscoll], a passionate developer/designer. I specialize in web development, design, and creative projects. With years of experience and a love for learning, I always strive to create intuitive, responsive, and visually stunning digital experiences.</p>
         </div>
     </section>
 
@@ -61,9 +61,8 @@
             <h2>Contact Me</h2>
             <p>If you'd like to work together, collaborate, or just want to say hello, feel free to reach out!</p>
             <ul>
-                <li>Email: <a href="mailto:yourname@example.com">yourname@example.com</a></li>
-                <li>LinkedIn: <a href="https://www.linkedin.com/in/yourprofile" target="_blank">LinkedIn Profile</a></li>
-                <li>GitHub: <a href="https://github.com/yourusername" target="_blank">GitHub Profile</a></li>
+                <li>Email: <a href="mailto:kylacdriscoll@gmail.com">kylacdriscoll@gmail.com</a></li>
+                <li>LinkedIn: <a href="https://www.linkedin.com/in/kyladriscoll" target="_blank">LinkedIn Profile</a></li>
             </ul>
         </div>
     </section>
@@ -71,7 +70,7 @@
     <!-- Footer -->
     <footer>
         <div class="container">
-            <p>&copy; 2025 Your Name</p>
+            <p>&copy; 2025 Kyla Driscoll</p>
         </div>
     </footer>
 
