--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Your Portfolio</title>
     <link rel="stylesheet" href="styles.css">
+    <!-- Font Awesome Icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
 
 <body>
@@ -35,21 +37,32 @@
     <!-- Projects Section -->
     <section id="projects">
         <div class="container">
-            <h2>Projects</h2>
+            <h2><i class="fas fa-star"></i> Projects</h2>
 
+            <!-- Marketing Section -->
             <details>
-                <summary>Project 1 - Cool Game</summary>
-                <p>Description of the project. What tools were used? What was the outcome?</p>
+                <summary><i class="fas fa-bullhorn"></i> Marketing</summary>
+                <details>
+                    <summary><i class="fas fa-pencil-alt"></i> Marketing Campaign 1</summary>
+                    <p>Details about the campaign, its goals, and outcome.</p>
+                </details>
+                <details>
+                    <summary><i class="fas fa-chart-line"></i> Marketing Campaign 2</summary>
+                    <p>Details about the campaign, its goals, and outcome.</p>
+                </details>
             </details>
 
+            <!-- Narrative Design Section -->
             <details>
-                <summary>Project 2 - Portfolio Website</summary>
-                <p>Description of the project. What tools were used? What was the outcome?</p>
-            </details>
-
-            <details>
-                <summary>Project 3 - UI Concept</summary>
-                <p>Description of the project. What tools were used? What was the outcome?</p>
+                <summary><i class="fas fa-scroll"></i> Narrative Design</summary>
+                <details>
+                    <summary><i class="fas fa-pen-fancy"></i> Narrative Project 1</summary>
+                    <p>Details about the project and its narrative structure.</p>
+                </details>
+                <details>
+                    <summary><i class="fas fa-feather-alt"></i> Narrative Project 2</summary>
+                    <p>Details about the project and its narrative structure.</p>
+                </details>
             </details>
 
         </div>
